# django-encrypted-filefield

./: .gitignore  CHANGES.rst  MANIFEST.in  README.rst  manage.py  pyproject.toml  requirements.txt  setup.py
demo/: django_encrypted_filefield  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
demo/demo/: admin.py  settings.py  urls.py  views.py
demo/demo/templates/demo/: detail.html
demo/migrations/: 0001_initial.py
demo/templates/demo/: index.html
django_encrypted_filefield/: __init__.py  apps.py  checks.py  constants.py  crypt.py  fields.py  fields.py~  views.py
django_encrypted_filefield/tests/: test_constants.py  test_crypt.py  test_fields.py  test_views.py
temporary/: forms.py  models.py
