[tool.poetry]
name = "django-encrypted-filefield"
version = "0.3.0"
homepage = "https://github.com/danielquinn/django-encrypted-filefield"
repository = "https://github.com/danielquinn/django-encrypted-filefield"
description = "Encrypt uploaded files, store them wherever you like and stream them back unencrypted"
authors = ["Daniel Quinn <code@danielquinn.org>"]
license = "GPL-3.0-or-later"
classifiers = [
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Topic :: Internet :: WWW/HTTP",
]


[tool.poetry.dependencies]
python = "^3.6"
cryptography = ">=1.7.1"
requests = ">=2.12.4"
python-magic = ">=0.4.12,<0.5.0"
django = ">=2.2"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.coverage.run]
branch = true
omit = ["tests.py"]


[tool.coverage.report]
ignore_errors = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError"
]


[tool.isort]
atomic = true
multi_line_output = 3
case_sensitive = true
lines_after_imports = 2
lines_between_types = 1
combine_as_imports = true
default_section = "THIRDPARTY"
known_django = "django"
line_length = 79
include_trailing_comma = true
sections=[
  "FUTURE",
  "STDLIB",
  "DJANGO",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]


[tool.black]
line-length = 79
target-version = ['py36']
include = '\.pyi?$'
exclude = '/(\.eggs|\.git|_build|build|dist)/'